--- a/ProjektKnihovna/ProjektKnihovna/MainWindow.xaml
+++ b/ProjektKnihovna/ProjektKnihovna/MainWindow.xaml
@@ -72,8 +72,10 @@
                   Height="450"
                   AutoGenerateColumns="False"
                   Margin="0,32,0,0"
+                  IsEnabled="False"
+                  Visibility="Hidden"
                   ItemsSource="{Binding SourceCollection}">
-            
+
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Název" Binding="{Binding Nazev}" Width="180"/>
                 <DataGridTextColumn Header="Cena" Binding="{Binding Cena}" Width="100"/>
@@ -91,6 +93,8 @@
                   Height="450"
                   AutoGenerateColumns="False"
                   Margin="0,32,0,0"
+                  IsEnabled="False"
+                  Visibility="Hidden"
                   ItemsSource="{Binding SourceCollection}">
 
             <DataGrid.Columns>
@@ -109,8 +113,10 @@
                 FontSize="16"
                 Width="700"
                 Height="32"
+                IsEnabled="False"
+                Visibility="Hidden"
                 Click="ButtonAdd_Click"/>
-        
+
         <Button Name="ButtonDelete"
                 Content="Odstraň z knihovny" 
                 HorizontalAlignment="Center" 
@@ -120,6 +126,8 @@
                 VerticalAlignment="Bottom"
                 FontSize="16"
                 Width="700"
+                IsEnabled="False"
+                Visibility="Hidden"
                 Height="32" Click="ButtonDelete_Click"/>
 
         <Label Name="PrihlasenyUzivatel"
@@ -129,33 +137,142 @@
                Margin="100,0,0,50"
                Grid.Row="1" 
                VerticalAlignment="Bottom"
-               FontSize="16"/>
+               FontSize="16"
+               IsEnabled="False"
+               Visibility="Hidden"/>
 
         <Button Name="Odhlaseni"
                Content="Odhlásit"
                Grid.Column="1"
                HorizontalAlignment="Right"
                Margin="0,0,100,50"
-               Width="80"
+               Width="100"
                Height="32"
                Grid.Row="1" 
                VerticalAlignment="Bottom"
-               FontSize="16"/>
+               FontSize="16"
+               IsEnabled="False"
+               Visibility="Hidden"/>
 
-        <Label
+        <Label Name="LabelNabidka"
                Content="Nabídka knih"
                Grid.Column="0"
                Grid.Row="1"
                HorizontalAlignment="Center"
                VerticalAlignment="Top"
-               FontSize="16"/>
+               FontSize="16"
+               IsEnabled="False"
+               Visibility="Hidden"/>
 
-        <Label
+        <Label Name="LabelZakoupeno"
                Content="Zakoupené knihy"
                Grid.Column="1"
                Grid.Row="1"
                HorizontalAlignment="Center"
                VerticalAlignment="Top"
-               FontSize="16"/>
+               FontSize="16"
+               IsEnabled="False"
+               Visibility="Hidden"/>
+
+        <Button Name="ButtonLogin"
+                Content="Přihlásit se"
+                Grid.Column="1" 
+                HorizontalAlignment="Left" 
+                Grid.Row="1" 
+                VerticalAlignment="Center"
+                FontSize="16"
+                Width="100"
+                Height="32"
+                Margin="20,100,0,0"/>
+
+        <Button Name="ButtonRegister"
+                Content="Registrovat"
+                Grid.Column="0" 
+                HorizontalAlignment="Right" 
+                Grid.Row="1" 
+                VerticalAlignment="Center"
+                FontSize="16"
+                Width="100"
+                Height="32"
+                Margin="0,100,20,0"/>
+
+        <TextBox Name="TextJmeno"
+                 Grid.Column="1" 
+                 HorizontalAlignment="Left" 
+                 Grid.Row="1" 
+                 TextWrapping="WrapWithOverflow"
+                 VerticalAlignment="Center" 
+                 Width="300"
+                 FontSize="16"
+                 Margin="20,0,0,200"/>
+
+        <Label Name="LabelJmeno"
+               Grid.Row="1"
+               Grid.Column="0"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Right"
+               Content="Jmeno:"
+               FontSize="16"
+               Margin="0,0,20,200"/>
+
+        <TextBox Name="TextEmail"
+                 Grid.Column="1" 
+                 HorizontalAlignment="Left" 
+                 Grid.Row="1" 
+                 TextWrapping="WrapWithOverflow"
+                 VerticalAlignment="Center" 
+                 Width="300"
+                 FontSize="16"
+                 Margin="20,0,0,100"/>
+
+        <Label Name="LabelEmail"
+               Grid.Row="1"
+               Grid.Column="0"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Right"
+               Content="Email:"
+               FontSize="16"
+               Margin="0,0,20,100"/>
+
+        <TextBox Name="TextHeslo"
+                 Grid.Column="1" 
+                 HorizontalAlignment="Left" 
+                 Grid.Row="1" 
+                 TextWrapping="WrapWithOverflow"
+                 VerticalAlignment="Center" 
+                 Width="300"
+                 FontSize="16"
+                 Margin="20,0,0,0"/>
+
+        <Label Name="LabelHeslo"
+               Grid.Row="1"
+               Grid.Column="0"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Right"
+               Content="Heslo:"
+               FontSize="16"
+               Margin="0,0,20,0"/>
+
+        <Label Name="LabelNazev"
+               Grid.Row="1"
+               Grid.Column="0"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Right"
+               Content="Přihlášení do knihovny"
+               FontSize="16"
+               FontStyle="Italic"
+               Margin="0,0,20,300"/>
+
+        <Label Name="LabelError"
+               Grid.Row="1"
+               Grid.Column="1"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Left"
+               Content="Error"
+               FontSize="16"
+               Foreground="Red"
+               Visibility="Hidden"
+               IsEnabled="False"
+               Margin="20,200,0,0"/>
     </Grid>
 </Window>
